@@ -1,4 +1,8 @@
-2010-01-31 Jiri Olsa <olsajiri@gmail.com>
+2011-02-15 Jiri Olsa <olsajiri@gmail.com>
+	* Sebastian Pipping <sping@gentoo.org>
+	  - fix LDFLAGS/CFLAGS usage
+
+2011-01-31 Jiri Olsa <olsajiri@gmail.com>
 	* adding support for global symbol config
 	  one global symbol tree to rule them all
 	    - only one tree is searched during the plt entry/exit
